src/flagd/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opentelemetry-demo-flagd
  labels:
    app.kubernetes.io/name: flagd
    app.kubernetes.io/component: feature-flags
    app.kubernetes.io/part-of: opentelemetry-demo
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 8013
    targetPort: grpc
    protocol: TCP
  - name: http
    port: 8016
    targetPort: http
    protocol: TCP
  selector:
    app.kubernetes.io/name: flagd
